fixed issue with compare icons stacking on mobile

--- a/client/components/navbar/navbar.scss
+++ b/client/components/navbar/navbar.scss
@@ -130,3 +130,13 @@
     }
   }
 }
+
+.navbar-compare ul {
+  @media (max-width: $screen-xs-max) {
+    margin-left: 0;
+
+    li {
+      float: left;
+    }
+  }
+}
